
Revision history for perl module SocialFlow::Deploy ( see https://metacpan.org/module/CPAN::Changes::Spec )

{{$NEXT}}

0.1_01    2014-03-27 02:38:51 Europe/London

- First release