@@ -31,6 +31,8 @@ LWP::Protocol::http::SocketUnixAlt = 0
 Moo::Lax                           = 0
 RPC::XML::Client                   = 0
 Safe::Isa                          = 0
+URI                                = 0
+Carp                               = 0
 [MetaResources]
 bugtracker.web    = https://github.com/ediblenergy/Supervisord-Client/issues
 repository.url    = https://github.com/ediblenergy/Supervisord-Client.git
