@@ -1,5 +1,7 @@
 use strict;
 use warnings FATAL => 'all';
 use Supervisord::Client;
-my $client = Supervisord::Client->new( path_to_supervisor_config => $ARGV[0] );
-warn $client->getAllProcessInfo;
+use Data::Dumper::Concise;
+#my $client = Supervisord::Client->new( path_to_supervisor_config => $ARGV[0] );
+my $client = Supervisord::Client->new( serverurl => $ARGV[0] );
+print Dumper( $client->getAllProcessInfo );
