@@ -1,3 +1,7 @@
+[inet_http_server]
+port=20666
+username=supervisor_user
+password=supervisor_password
 [unix_http_server]
 file=supervisor.sock
 chmod = 0770
