@@ -7,6 +7,8 @@ use Moo::Lax;
 use Carp;
 use Safe::Isa;
 use Config::INI::Reader;
+use LWP::UserAgent;
+use URI;
 
 LWP::Protocol::implementor(
     supervisorsocketunix => 'LWP::Protocol::http::SocketUnixAlt' );
@@ -20,10 +22,17 @@ has serverurl => (
     is       => 'ro',
     required => 0,
 );
-
+has ua => (
+    is => 'ro',
+    lazy_build => 1,
+);
 has rpc        => ( is => 'lazy' );
 has _serverurl => ( is => 'lazy' );
 
+sub _build_ua {
+    my $self = shift;
+    LWP::UserAgent->new;
+}
 sub _build__serverurl {
     my $self = shift;
     return $self->serverurl if $self->serverurl;
@@ -37,9 +46,15 @@ sub _build__serverurl {
 sub _build_rpc {
     my $self = shift;
     my $url  = $self->_serverurl;
-    $url =~ s|unix://|supervisorsocketunix:|g;
-    $url .= "//RPC2";
-    my $cli = RPC::XML::Client->new($url);
+    my $uri = URI->new( $url );
+    if( lc($uri->scheme) eq 'unix' ) {
+        my $socket_uri = URI->new("supervisorsocketunix:");
+        $socket_uri->path_segments( $uri->path_segments, "", "RPC2" );
+        $uri = $socket_uri;
+    } else {
+        $uri->path_segments( $uri->path_segments, "RPC2" );
+    }
+    my $cli = RPC::XML::Client->new( $uri, useragent => $self->ua );
 }
 
 sub BUILD {
@@ -61,6 +76,7 @@ sub send_rpc_request {
     my( $self, @params ) = @_;
     my $ret = $self->rpc->send_request( @params );
     return $ret->value if $ret->$_can("value");
+    return $ret;
 }
 
 1;
@@ -73,6 +89,8 @@ Supervisord::Client - a perl client for Supervisord's XMLRPC.
 
     my $client = Supervisord::Client->new( serverurl => "unix:///tmp/socky.sock" );
     #or
+    my $client = Supervisord::Client->new( serverurl => "http://foo.bar:25123" );
+    #or
     my $client = Supervisord::Client->new( path_to_supervisor_config => "/etc/supervisor/supervisor.conf" );
     warn $_->{description} for(@{ $client->getAllProcessInfo });
     #or
@@ -81,10 +99,9 @@ Supervisord::Client - a perl client for Supervisord's XMLRPC.
 =head1 DESCRIPTION
 
 This module is for people who are using supervisord (  L<http://supervisord.org/> ) to manage their daemons,
-and are using the unix socket form of the RPC ( as opposed to http server ).
-This module will work with either, but really you're not getting much vs L<RPC::XML::Client> for the http version;
-the http over Unix socket part is where this module comes in handy.
-See L<http://supervisord.org/api.html> for the API docs.
+and ran into problems with the http over Unix socket part.
+
+See L<http://supervisord.org/api.html> for the API docs of what the supervisord XMLRPC supports.
 
 =head1 METHODS
 
@@ -98,11 +115,14 @@ Access to the RPC::XML::Client object.
 
 =head2 send_rpc_request( remote_method, @params )
 
+
 =head2 AUTOLOAD
 
 This module uses AUTOLOAD to proxy calls to send_rpc_request. See synopsis for examples.
 
 =head1 CONSTRUCTOR PARAMETERS
+
+path_to_supervisor_config or serverurl is required.
 
 =over
 
@@ -112,9 +132,12 @@ optional - ex: /tmp/super.sock
 
 =item serverurl
 
-optional - in supervisor format, ex: unix:///tmp.super.sock
+    optional - in supervisor format, ex: unix:///tmp.super.sock | http://myserver.local:8080
 
-One of the two is required.
+
+=item ua
+
+    optional - A LWP::UserAgent compatible object.
 
 =back
 
